# guardian-reporting

./: .dockerignore  .gitignore  .gitmodules  README.md  docker-compose.yml  pyproject.toml  requirements.txt
app/: .env.db  .env.redis  logging_config.yaml  main.py
app/core/: __init__.py  config.py
app/report/: __init__.py  core.py  excel.py  latex.py  pdf.py  util.py
docker/redis/: Dockerfile  redis-dev.conf  redis.conf
docker/reporting/: Dockerfile
resources/v1/: excel-template.xlsx
resources/v1/latex-template/: guardian.sty  main.tex
